--- a/dondEducar/dondEducar/Views/Shared/_Layout.cshtml
+++ b/dondEducar/dondEducar/Views/Shared/_Layout.cshtml
@@ -70,12 +70,12 @@
     </div>
     <div id="footer">
         <div class="container">
-            <div class="pull-right">
+           @* <div class="pull-right">
                 <h3 style="color:whitesmoke;">Hombre, pueblo, Nación, Estado, todo... todo está en los humildes bancos de la escuela.</h3>
                 <span class="label label-primary pull-right">Domingo Faustino Sarmiento</span>
-            </div>
+            </div>*@
 
-            <p class="text-muted"><strong>dondeducar</strong> - BsApps - @DateTime.Now.Year.</p>
+            <p class="text-muted center"><strong>dondeducar</strong> - BsApps - @DateTime.Now.Year.</p>
         </div>
     </div>
     <script type="text/javascript">
