--- a/dondEducar/dondEducar/Views/Home/Index.cshtml
+++ b/dondEducar/dondEducar/Views/Home/Index.cshtml
@@ -1,5 +1,9 @@
 ﻿<div class="text-center header-color">
-    <h1>La educación al alcance de tu mano</h1>
+    <h1><img src='@Url.Content("~/Content/images/dondeducar-logo.png")' alt="dondeducar" ></h1>
+    <h2 style="font-family: 'Comic Sans';">
+        <span>La educación al alcance de tu mano</span>
+    </h2>
+    
 </div>
 <div class="blocks">
     <a href='@Url.Action("ListaEstablecimientos","ListaEstablecimientos", new { nivelEducativo = "Inicial" })'>
