--- a/dondEducar/dondEducar/Views/Home/Informacion.cshtml
+++ b/dondEducar/dondEducar/Views/Home/Informacion.cshtml
@@ -1,8 +1,11 @@
-﻿@{
-    ViewBag.Title = "Informacion";
-}
+﻿
 
-<h2>Informacion</h2>
+<div class="row">
+    <div class="col-md-8 col-md-offset-2">
+        <h2>Informacion</h2>
 
-DondEducar se propone como una herramienta para buscar escuelas, ya sea por su tipo de gestion, ubicacion o nivel educativo. 
-Permitiendo dejar comentarios sobre las mismas y puntuandolas. 
+        <p>DondEducar se propone como una herramienta para buscar escuelas, ya sea por su tipo de gestion, ubicacion o nivel educativo.</p>
+        <p>Permitiendo dejar comentarios sobre las mismas y puntuandolas. </p>
+
+    </div>
+</div>
