--- a/dondEducar/dondEducar/Views/Shared/_Layout.cshtml
+++ b/dondEducar/dondEducar/Views/Shared/_Layout.cshtml
@@ -30,20 +30,30 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="@Url.Action("Index", "Home")"><strong>dondeducar</strong></a>
+            <a class="navbar-brand" href="@Url.Action("Index", "Home")">
+                <img src='@Url.Content("~/Content/images/logo-16x16.png")' alt="" >
+                <strong>dondeducar</strong>
+            </a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="@Session["AutenticateUrl"]"><span class="glyphicon glyphicon-log-in"></span>&nbsp;Iniciar sesión</a></li>
-                <li><a href="@Url.Action("Contacto", "Home")"><span class="glyphicon glyphicon-earphone"></span>&nbsp;Contacto</a></li>
+                @if (String.IsNullOrWhiteSpace((string)Session["AccessToken"]))
+                {
+                    <li><a href="@Session["AutenticateUrl"]"><span class="glyphicon glyphicon-log-in"></span>&nbsp;Iniciar sesión</a></li>
+                }
+                else
+                {
+                    <li><a href="@Url.Action("CerrarSesion","Home")"><span class="glyphicon glyphicon-log-out"></span>&nbsp;Cerrar sesión</a></li>
+                }
+                @*<li><a href="@Url.Action("Contacto", "Home")"><span class="glyphicon glyphicon-earphone"></span>&nbsp;Contacto</a></li>*@
                 <li><a href="@Url.Action("Informacion", "Home")"><span class="glyphicon glyphicon-info-sign"></span>&nbsp;Información</a></li>
+                <li><a href="@Url.Action("Donaciones", "Home")"><span class="glyphicon glyphicon-heart-empty"></span>&nbsp;Donaciones</a></li>
             </ul>
         </div>
     </nav>
 
     <div class="body-wrapper">
         <div id="body" class="content-wrapper">
-
             <!-- Modal -->
             <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
